# fitspec

./: .gitignore  .travis.yml  CREDITS.md  FitSpec.hs  FitSpec.html  FitSpecC.html  LICENSE  Makefile  Mutate-Show.html  Mutate.html  Mutation.html  README.md  TODO.md  Test-Types-Mutate.html  doc-index.html  fitspec.cabal  fitspec.haddock  hello.hs  index-frames.html  index.html  mini_FitSpec.html  mini_FitSpecC.html  mini_Mutate-Show.html  mini_Mutate.html  mini_Mutation.html  mini_Test-Types-Mutate.html  stack.yaml
.github/workflows/: build.yml
FitSpec/: Derive.hs  Dot.hs  Engine.hs  Main.hs  Mutable.hs  PrettyPrint.hs  Report.hs  ShowMutable.hs  TestTypes.hs  Utils.hs
FitSpec/Grey/: CatchEvaluation.hs
FitSpec/Mutable/: Tuples.hs
bench/: AVLTree.hs  Digraph.hs  Heap.hs  Set.hs  avltrees.hs  bools.hs  digraphs.hs  haskell-src-exts.hs  haskell-src.hs  heaps.hs  id.hs  list.hs  mergeheaps.hs  pretty.hs  sets.hs  setsofsets.hs  setsosets.hs  sieve.hs  sorting.hs  spring.hs
black/: CatchEvaluation.hs  FitSpec.hs  FitSpecC.hs  FitSpecDot.hs  LICENSE  Makefile  Mutate.hs  Mutation.hs  PPP.hs  PPPrint.hs  README.md  Table.hs  Utils.hs  fitspec.cabal
black/FitSpec/: Derive.hs  Dot.hs  Engine.hs  Grey.hs  Main.hs  Most.hs  Mutable.hs  PrettyPrint.hs  ShowMutable.hs  Utils.hs
black/FitSpec/Grey/: Mutation.hs
black/Mutate/: Derive.hs  Show.hs
black/Test/Types/: Mutate.hs
black/bench/: AVLTree.hs  Heap.hs  avltrees.hs  bools.hs  heap.hs  heaps.hs  id.hs  list.hs  pretty.hs  sieve.hs  simple-sorting.hs  sorting.hs  spring.hs
black/eg/: Makefile  sorting.hs
black/mk/: depend.mk  ghcdeps  haskell.mk
black/tests/: test-derive.hs  test-mutate.hs
doc/: modules.md  tutorial-property-creation.md
eg/: Makefile  alga.hs  negation.hs  sorting.hs
mk/: Toplibs.hs  depend.mk  ghcdeps  haddock-i  haskell.mk  install-on  upload-haddock-to-hackage
patterns/: BitMask.hs  Mutants.hs  README.md  fitspec.cabal
patterns/bench/: Append.hs  Heap.hs  avltrees.hs  list.hs  pretty.hs  sorting.hs
results/: sorting-ebool-m1000-n1000-vr4-zero  sorting-ebool-m400-n400-vr4-zero  sorting-eint-m4000-n10000-vr4-zero  sorting-eint-m4000-n100000-vr4-zero  sorting-eint-m4000-n4000-vr4-zero  sorting-eint-m4000-n40000-vr4-zero  sorting-ew1-m1000-n1000-vr4-zero  sorting-ew1-m2000-n2000-vr4-zero  sorting-ew1-m4000-n4000-vr4-zero  sorting-ew2-m1000-n1000-vr4-zero  sorting-ew2-m4000-n4000-vr4-zero  sorting-ew3-m4000-n10000-vr4-zero  sorting-ew3-m4000-n100000-vr4-zero  sorting-ew3-m4000-n4000-vr4-zero  sorting-ew3-m4000-n40000-vr4-zero
results/heaps/: black-tbool-n1000-m1000-zero  black-tbool-n1000-m10000-zero  black-tbool-n1000-m5000-zero  black-tbool-n10000-m10000-zero  black-tint2-n1000-m1000-oubli  black-tint2-n1000-m2000-oubli  black-tint2-n1000-m3000-oubli
results/list/: black-tbool-n1000-m1000-e-zero  black-tbool-n1000-m1000-zero  black-tint-n1000-m1000-e-zero  black-tint-n1000-m1000-zero  black-tint2-n1000-m1000-e-zero  black-tint2-n1000-m1000-zero  black-tint2-n4000-m10000-zero
results/sorting/: black-tbool-n1000-m1000-e-zero  black-tbool-n1000-m1000-zero  black-tint-n1000-m1000-zero  black-tint-n10000-m1000-zero  black-tint-n10000-m4000-zero  black-tint-n100000-m4000-zero  black-tint2-m1000-n1000-zero  black-tint2-m4000-n1000-zero  black-tint2-m4000-n4000-zero  black-tint3-m100000-n4000-zero  black-tint3-m4000-n4000-zero  grey-tbool-n1000-m1000-zero  grey-tint-n1000-m1000-zero  grey-tint-n1000-m10000-zero  grey-tint-n10000-m10000-zero  grey-tint-n100000-m10000-zero  patterns-tbool-n1000-m10-y-zero  patterns-tbool-n1000-m10-zero  patterns-tbool-n4000-m10-y-zero  patterns-tbool-n4000-m10-zero  patterns-tbool-n4000-m9-y-zero  patterns-tbool-n4000-m9-zero  white-tbool-n1000-m250-zero  white-tbool-n500-m1000-zero  white-tbool-n500-m500-zero  white-tint-n500-m500-zero  white-tint2-n500-m1000-zero  white-tint2-n500-m500-zero
results/spring/: black-m1000-n1000-tint2-oubli  black-m2000-n2000-tint2-oubli  black-m3000-n3000-tint2-oubli  black-m4000-n4000-tint2-oubli  black-m6000-n6000-tint2-oubli
src/FitSpec/: Dot.hs  Main.hs  ShowMutable.hs  TestTypes.hs
src/FitSpec/ShowMutable/: Tuples.hs
src/Test/: FitSpec.hs
src/Test/FitSpec/: Derive.hs  Dot.hs  Engine.hs  Main.hs  Most.hs  Mutable.hs  PrettyPrint.hs  Report.hs  ShowMutable.hs  TestTypes.hs  Utils.hs
src/Test/FitSpec/Mutable/: Tuples.hs
src/Test/FitSpec/ShowMutable/: Tuples.hs
test/: derive.hs  sdist  showmutable.hs
tests/: test-derive.hs  test-mutate.hs  test-sdist  test-showmutable.hs  test-utils.hs
white/: FitSpec.hs  Table.hs  Utils.hs  fitspec.cabal
white/bench/: Heap.hs  SizedTestTypes.hs  bools.hs  heap.hs  heaps.hs  list.hs  sorting.hs  sum.hs
