name:                fitspec
version:             0.1.0.1
-- synopsis:
-- description:
license:             BSD3
license-file:        LICENSE
author:              Rudy Matela
maintainer:          rudy@matela.com.br
-- copyright:
-- category:
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  exposed-modules:   FitSpec, Mutate
  other-modules:     Table
  build-depends:     base,  llcheck
  hs-source-dirs:    .
  default-language:  Haskell2010

benchmark bools
  main-is:           bools.hs
  build-depends:     base,  llcheck
  hs-source-dirs:    ., bench
  default-language:  Haskell2010
  type:              exitcode-stdio-1.0

benchmark spring
  main-is:           spring.hs
  build-depends:     base,  llcheck
  hs-source-dirs:    ., bench
  default-language:  Haskell2010
  type:              exitcode-stdio-1.0

benchmark sorting
  main-is:           sorting.hs
  build-depends:     base,  llcheck
  hs-source-dirs:    ., bench
  default-language:  Haskell2010
  type:              exitcode-stdio-1.0

benchmark simple-sorting
  main-is:           simple-sorting.hs
  build-depends:     base,  llcheck
  hs-source-dirs:    ., bench
  default-language:  Haskell2010
  type:              exitcode-stdio-1.0

benchmark heap
  main-is:           heap.hs
  build-depends:     base,  llcheck
  hs-source-dirs:    ., bench, bench
  default-language:  Haskell2010
  type:              exitcode-stdio-1.0

benchmark list
  main-is:           list.hs
  build-depends:     base,  llcheck
  hs-source-dirs:    ., bench, bench
  default-language:  Haskell2010
  type:              exitcode-stdio-1.0
